--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html{
     font-size: 10px;
     font-family: 'Roboto Slab', serif;
     color:rgb(0, 0, 0);
-    background-color:rgb(239, 241, 240);
+    background-color:#eff1f0;
 }
 
 main{
